# Kaggle_CMI

./: .gitignore  Competition_Overview.md  README.md  kaggle_submission_instructions.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.serena/: project.yml
1_IMU_baseline_lgbm_20250812/: README.md  config.yaml  main.py
2_IMU_improved_20250812/: README.md  main.py  requirements.txt
3_IMU_analysis_and_strategy/: 3_IMU_two_stage_all_in_one.ipynb  3_IMU_two_stage_fixed.py  implementation_roadmap.md  improvement_analysis.md  kaggle_inference_fix_report.md  notebook_implementation_review.md
4_1D-CNN+BiLSTM+Attention/: code_review.md  deep.py
4_IMU_more_feature/: deep_fixed.py  deep_updated.py  detailed_comparison_review.md  implementation_summary.md
5_CMI_comprehensive/: USAGE_GUIDE.md  all_in_one_solution.py  data_processing_spec.md  implementation_roadmap.md  model_architecture_spec.md  quick_test.py  run_training.sh
5_Hierarchical_Multi_Model_Ensemble/: README.md  all_in_one_solution.py  comprehensive_solution.py  kaggle_submission.py  strategy_and_implementation.md
6_Feature_Research/: 10_fixes_applied.md  11_fb.md  12_fixes_11fb_applied.md  1_plan-pro.md  4_feedback-pro.md  5_feedback-pro.md  6_feature-thinking.md  7_feedback-pro.md  8_feedback.md  8_plan-pro.md  9_fb.md  feature_engineering_xgboost.py  lack.md  plan-thinking.md
7_feature_IMU_enhanced/: 1_plan-pro.md  IMU_enhanced_xgboost.py
8_starter/: 0_starter.py  1_IMU_rich.py  2_pre-processing-task.md  3_fb.md  4.5_model_inference.md  4.7_fb.md  4_fb.md  5_IMU+TOF+THM.py  6.8_feature_map.md  7_fb.md  (+2 more)
(+72 files in other folders)
